# mycora

./: .gitignore  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  INSTALL-WINDOWS.md  LICENSE-APACHE  LICENSE-MIT  PUBLISH.md  README.md  ROADMAP.md  USAGE.md  mycora-keymap.html
.github/workflows/: windows-release.yml
assets/fonts/: LICENSE-dejavu.txt
docs/: mycora-demo.cast
examples/: benchmark.rs  generate-test-vault.rs
examples/rust-vault/: cargo.md  cas-usage.md  cli-mycora.md  clippy.md  concurrence-sans-peur.md  crates-io.md  embarque.md  enums-pattern-matching.md  genericite.md  gestion-erreurs.md  le-langage.md  lifetimes.md  macros.md  outils-ecosysteme.md  ownership-borrowing.md  pourquoi-rust.md  programmation-systeme.md  rust.md  rustfmt.md  rustup.md  securite-memoire.md  tests-integres.md  traits.md  webassembly.md  zero-cost-abstractions.md
examples/showcase-jsoned/: a-panic-hook-restores-the-terminal-before-the-report-prints.md  a-pinned-crossterm-feature-flag-avoids-a-macos-pipe-mode-crash.md  an-external-editor-not-just-a-standalone-tool.md  architecture.md  ctrl-c-is-checked-first-in-every-mode-not-just-normal.md  design-decisions.md  diff-gets-its-own-read-only-app.md  editing-scalars-with-type-conversion.md  features.md  four-entry-points-one-binary.md  headless-format-conversion.md  jnode-kept-deliberately-separate-from-serde-json-value.md  jsoned.md  jsonl-is-just-one-json-value-per-line.md  no-criterion-manual-timed-tests-instead.md  performance.md  philosophy.md  pipe-mode.md  redact-on-export.md  roadmap.md  save-as-any-supported-format.md  search.md  stdin-piped-input-renders-to-stderr-so-stdout-stays-clean.md  structural-diff-between-files.md  structural-diff-not-textual-diff.md  structural-editing.md  structural-lint.md  the-jq-plugin.md  the-keymap-cheat-sheet-reuses-jsoned-s-own-accent-colors.md  the-patch-pattern-is-190-250x-faster-than-a-full-rebuild.md  three-panel-layout.md  (+5 more)
src/: app.rs  archive.rs  clipboard.rs  config.rs  event.rs  export.rs  import.rs  index.rs  lang.rs  lib.rs  link.rs  main.rs  markdown.rs  note.rs  outline.rs  repair.rs  session.rs  tree.rs  ui.rs  vault.rs
(+123 files in other folders)
