[package]
name = "mycora"
version = "0.1.0"
edition = "2024"
description = "A tree-native, mycelium-linked note-taking TUI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TSODev/mycora"
readme = "README.md"
keywords = ["tui", "notes", "outliner", "zettelkasten", "ratatui"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.103"
crossterm = "0.29.0"
ratatui = "0.30.2"
