[package]
name = "mycora"
version = "0.1.0"
edition = "2024"
description = "A tree-native, mycelium-linked note-taking TUI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TSODev/mycora"
readme = "README.md"
keywords = ["tui", "notes", "outliner", "zettelkasten", "ratatui"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.103"
crossterm = "0.29.0"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
time = { version = "0.3.53", features = ["formatting", "parsing", "serde-well-known"] }
toml = "1.1.2"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
