[package]
name = "mycora"
version = "0.10.0"
edition = "2024"
description = "A tree-native, mycelium-linked note-taking TUI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TSODev/mycora"
readme = "README.md"
keywords = ["tui", "notes", "outliner", "zettelkasten", "ratatui"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
flate2 = "1.1.9"
markdown2pdf = "1.5.0"
notify = "6.1"
pulldown-cmark = { version = "0.13.4", default-features = false }
ratatui = "0.30.2"
ratatui-textarea = "0.9.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tar = "0.4.46"
time = { version = "0.3.53", features = ["formatting", "parsing", "serde-well-known"] }
toml = "1.1.2"
uuid = { version = "1.23.4", features = ["v4", "serde"] }

[dev-dependencies]
fake = "5.1.0"
rand = "0.10.2"
